<resources>
    <string name="app_name">KonaBess Next</string>
    <string name="environ_setup_failed">Failed when setting up the environment</string>
    <string name="storage_permission_failed">Unable to get storage permission</string>
    <string name="repack_and_flash">Repack and flash new image</string>
    <string name="backup_old_image">Backup old image</string>
    <string name="will_backup_to">The old image will be extracted to</string>
    <string name="ok">ok</string>
    <string name="cancel">cancel</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="author">Author:</string>
    <string name="release_at">Release at</string>
    <string name="visit_akr">Visit thread</string>
    <string name="edit_gpu_freq_table">Edit GPU freq table</string>
    <string name="edit_gpu_volt_table">Edit GPU volt table</string>
    <string name="import_export">Import/Export</string>
    <string name="backuping_img">Doing backup, please wait</string>
    <string name="failed_backup">Failed when doing backup</string>
    <string name="backup_fail">Backup failed</string>
    <string name="backup_success">Done</string>
    <string name="repacking">Repacking boot image, please wait</string>
    <string name="repack_failed">Failed when repacking</string>
    <string name="flashing_boot">Flashing boot image. Please give root permission and wait.</string>
    <string name="flashing_failed">Failed when flashing the image, please check root permission.</string>
    <string name="reboot_complete_title">Reboot to complete changes</string>
    <string name="reboot_complete_msg">Would you like to reboot your device now?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="failed_reboot">Failed when trying to reboot,. Please check root permission.</string>
    <string name="getting_image">Getting boot image. Please give root permission and wait.</string>
    <string name="failed_get_boot">Failed when getting boot image. Please check root permission.</string>
    <string name="unpacking">Unpacking the image. Please wait.</string>
    <string name="unpack_failed">Failed when unpacking</string>
    <string name="incompatible_device">Incompatible device</string>
    <string name="failed_checking_platform">Failed when checking the platform</string>
    <string name="error">Error</string>
    <string name="long_press_to_copy">( Long press to copy )</string>
    <string name="please_wait">Please wait</string>
    <string name="loading">Loading...</string>
    <string name="back">Back</string>
    <string name="copy">Copy</string>
    <string name="save">Save</string>
    <string name="save_success">Saved</string>
    <string name="save_failed">Failed when saving</string>
    <string name="error_occur">An error occurred</string>
    <string name="invalid_value">Invalid value</string>
    <string name="edit">Edit</string>
    <string name="unable_add_more">Unable to add more frequencies</string>
    <string name="select_bin_first">Please select a bin first</string>
    <string name="new_item">New</string>
    <string name="new_desc">Add a new frequency</string>
    <string name="add_freq_top">Add frequency to top</string>
    <string name="add_freq_top_desc">Duplicate the first entry to insert at the beginning</string>
    <string name="add_freq_bottom">Add frequency to bottom</string>
    <string name="add_freq_bottom_desc">Duplicate the last entry to append at the end</string>
    <string name="new_desc_volt">Add a new voltage level</string>
    <string name="duplicate_frequency">Duplicate this frequency</string>
    <string name="remove">Remove</string>
    <string name="remove_msg">Are you sure to remove %d MHz?</string>
    <string name="remove_msg_volt">Are you sure to remove the voltage level of %d MHz?</string>
    <string name="save_freq_table">Save GPU freq table</string>
    <string name="getting_freq_table">Getting GPU freq table. Please wait.</string>
    <string name="getting_freq_table_failed">Failed when getting GPU freq table</string>
    <string name="save_volt_table">Save GPU volt table</string>
    <string name="freq">Frequency</string>
    <string name="volt">Voltage level</string>
    <string name="volt_freq_msg">This refers to the frequency corresponding to this voltage level.\nThe unit of frequency here is Hz, that is to say, add 6 zeros after the MHz frequency. You can view the frequency in MHz in the previous page.\nIf you don\'t know how many zeros to add, it is recommended to change only the first few digits of the number.</string>
    <string name="getting_volt">Getting GPU voltage table. Please wait.</string>
    <string name="getting_volt_failed">Failed when getting voltage table</string>
    <string name="sdm865">Snapdragon 865</string>
    <string name="sdm865p">Snapdragon 865+</string>
    <string name="sdm865m">Snapdragon 865-</string>
    <string name="unknown_table">Unknown frequency table </string>
    <string name="sdm865_singlebin">Snapdragon 865 (Android Q)</string>
    <string name="sdm855">Snapdragon 855</string>
    <string name="sdm855p">Snapdragon 855+</string>
    <string name="sdm855_singlebin">Snapdragon 855 (Android P)</string>
    <string name="sdm888_singlebin">Snapdragon 888 (old FW)</string>
    <string name="editvolt_msg">This refers to the voltage corresponding to this frequency. You can specify the voltage level to be used for this frequency.\nThe voltage increases from top to bottom.</string>
    <string name="help_gpufreq_aio">This is the working frequency of the GPU. You can change the available frequencies in the frequency table by changing this value.\nThe unit of frequency here is Hz, that is to say, add 6 zeros after the MHz frequency. You can view the frequency in MHz in the previous page.\nIf you don\'t know how many zeros to add, it is recommended to change only the first few digits of the number.</string>
    <string name="help_gpufreq">This is the working frequency of the GPU. You can change the available frequencies in the frequency table by changing this value.\nHowever, remember to make sure that the frequency can find the corresponding voltage in the voltage table, otherwise, it is impossible to boot the phone.\nThe unit of frequency here is Hz, that is to say, add 6 zeros after the MHz frequency. You can view the frequency in MHz in the previous menu. If you don\'t know how many zeros to add, it is recommended to modify only the first few digits of the number.\n</string>
    <string name="help_bus">This is probably the memory bus frequency related configuration corresponding to the GPU frequency. The value specifies the frequency level.\nPlease do not change the value too large (beyond the level given by the default maximum frequency), which may lead to the failure to find the specified level and the failure to boot the device.</string>
    <string name="help_acd">ACD may refer to \"auto-calibrating dynamically adaptive clock distribution\"? It seems to be something related to the clock speed adjustment. IDK more about this.</string>
    <string name="help_msg">Welcome!\nBy using this tool, you can edit the GPU frequency table and voltage table of Snapdragon 855, 865, 888 and 765 series processors freely, such as overclocking and undervolt.\nThe following is an example to illustrate how to do overclocking: First, click \"Edit GPU freq table\", and it will show the frequency tables in the device. There may be multiple frequency tables in a device. I have annotated the frequency tables, but it may not accurate. So please judge which frequency table your device is using according to the frequency table in various GPU frequency adjustment softwares.\nClick a frequency table to show all frequencies in it, and then click \"new\" on top to copy the max frequency. Then click the copied new frequency to enter the parameter setting page, and click the \"frequency\" above to modify it according to the demand.\nAfter modification, click \"save\". After saving, you can click \"Edit GPU freq table\" again to refresh and view to confirm that the saving is successful.\nAnd then you can click \"Edit GPU volt table\". At this time, the available frequencies of all frequency tables will be displayed. If the frequency specified by the frequency table is not in the voltage table, it is inevitable that the phone will not able to boot. Then click \"new\" on top, and the max frequency will be copied. Then click the new frequency to enter it.\nClick \"frequency\" to change it to the frequency previously specified when editing the frequency table. Then, a suitable voltage level can be selected for this frequency.\nClick \"save\" again. After saving, you can click \"Edit GPU volt table\" again to refresh and view. Confirm that the saving is successful.\nAfter confirming that everything is OK, flash the image and restart the phone.\nIn a word, please make sure that the frequency in the frequency table exists in the volt table.</string>
    <string name="help_msg_aio">Welcome!\nBy using this tool, you can edit the GPU frequency table and voltage table of Snapdragon 855, 865, 888 and 765 series processors freely, such as overclocking and undervolt.\nThe following is an example to illustrate how to do overclocking: First, click \"Edit GPU freq table\", and it will show the frequency tables in the device. There may be multiple frequency tables in a device. I have annotated the frequency tables, but it may not accurate. So please judge which frequency table your device is using according to the frequency table in various GPU frequency adjustment softwares.\nClick a frequency table to show all frequencies in it, and then click \"new\" on top to copy the max frequency. Then click the copied new frequency to enter the parameter setting page, and then edit the frequency and voltage according to the demand.\nAfter modification, click \"save\". After saving, you can click \"Edit GPU freq table\" again to refresh and view to confirm that the saving is successful.\nAfter confirming that everything is OK, flash the image and restart the phone.</string>
    <string name="sdm865_series">Snapdragon 865 series</string>
    <string name="sdm855_series">Snapdragon 855 series</string>
    <string name="unknown">Unknown</string>
    <string name="paste_here">Paste data here</string>
    <string name="import_data">Import</string>
    <string name="confirm">Confirm</string>
    <string name="input_introduction_here">Input the introduction of the profile here</string>
    <string name="export_data">Export data</string>
    <string name="export_data_msg">You can customize the introduction of the data, and the text will be presented when the data is imported</string>
    <string name="export_done">Export done</string>
    <string name="export_done_msg">Here is the exported data</string>
    <string name="success_export_to">Successfully export to</string>
    <string name="select_dtb_title">Select the target chipset</string>
    <string name="possible_dtb">This may be the chipset data your device are using.</string>
    <string name="currently_selected">Currently Selected</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="export_history">Export History</string>
    <string name="no_export_history">No Export History</string>
    <string name="no_export_history_desc">Your exported configurations will appear here</string>
    <string name="clear_all">Clear All</string>
    <string name="raw_dts_editor">Raw DTS Editor</string>
    <string name="search">Search</string>
    <string name="search_hint">Search text…</string>
    <string name="loading_file">Loading file…</string>
    <string name="copy_all">Copy All</string>
    <string name="search_previous">Previous match</string>
    <string name="search_next">Next match</string>
    <string name="close">Close</string>
    <string name="visual_view">Visual View</string>
</resources>