<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/save"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export_modern"
        android:title="Export"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/redo"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_toggle_view"
        android:icon="@drawable/ic_drag_handle"
        android:title="@string/visual_view"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_copy_all"
        android:icon="@drawable/ic_content_copy"
        android:title="@string/copy_all"
        app:showAsAction="never" />
        
</menu>
